tests/listener/multiple/https/0-secrets.yaml
apiVersion: v1
kind: Secret
metadata:
  name: coffee
type: kubernetes.io/tls
data:
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURHakNDQWdJQ0NRQ2ZqU0J2ams5QXN6QU5CZ2txaGtpRzl3MEJBUXNGQURCUE1Rc3dDUVlEVlFRR0V3SlYKVXpFTE1Ba0dBMVVFQ0F3Q1EwRXhGakFVQmdOVkJBY01EVk5oYmlCR2NtRnVZMmx6WTI4eEd6QVpCZ05WQkFNTQpFbU52Wm1abFpTNWxlR0Z0Y0d4bExtTnZiVEFlRncweU1qRXdNalF4T1RBMU1UbGFGdzB6TWpFd01qRXhPVEExCk1UbGFNRTh4Q3pBSkJnTlZCQVlUQWxWVE1Rc3dDUVlEVlFRSURBSkRRVEVXTUJRR0ExVUVCd3dOVTJGdUlFWnkKWVc1amFYTmpiekViTUJrR0ExVUVBd3dTWTI5bVptVmxMbVY0WVcxd2JHVXVZMjl0TUlJQklqQU5CZ2txaGtpRwo5dzBCQVFFRkFBT0NBU [...]
  tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2Z0lCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktnd2dnU2tBZ0VBQW9JQkFRRHViOW1QdGRROWhvb3cKdFZiZ01ZVEdYUHE3aEVKWWZ1bzA2QVM1akFuaE5wRk5GZVV2Y3AxZXA2MWl3UkFhaWppODkvSk5qMEhNR2VDUwpNbisvc2RLV2xiNVFRVWJtd2N5djZlSGVEWjhSd215WWpRMUJqS2RCOTFSS2d3OTI4SHBudWxEV2Nmc2xYQ1daCjZKMUQ5M00xUHdydG9hOHRFRVhyb0NHTUhhN3k4bmpmVVNSZUVuWk9taXhQc3lFNW9PNzVvYUU4aDlsN1RURkMKYS9BN05Wc0VoRU9hRVdsZDFwZkhyUVVHRnZwL2lYQ3M0Vzk4K1BKSVRlYXN5QlQwR2YralRHM2lGNFE0U3BuawpjOGRLZ2ZqWGNCcGlRR [...]
---
apiVersion: v1
kind: Secret
metadata:
  name: tea
type: kubernetes.io/tls
data:
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURGRENDQWZ3Q0NRRHFsSmRrVExIV1B6QU5CZ2txaGtpRzl3MEJBUXNGQURCTU1Rc3dDUVlEVlFRR0V3SlYKVXpFTE1Ba0dBMVVFQ0F3Q1EwRXhGakFVQmdOVkJBY01EVk5oYmlCR2NtRnVZMmx6WTI4eEdEQVdCZ05WQkFNTQpEM1JsWVM1bGVHRnRjR3hsTG1OdmJUQWVGdzB5TWpFd01qUXhPVEE1TkRCYUZ3MHpNakV3TWpFeE9UQTVOREJhCk1Fd3hDekFKQmdOVkJBWVRBbFZUTVFzd0NRWURWUVFJREFKRFFURVdNQlFHQTFVRUJ3d05VMkZ1SUVaeVlXNWoKYVhOamJ6RVlNQllHQTFVRUF3d1BkR1ZoTG1WNFlXMXdiR1V1WTI5dE1JSUJJakFOQmdrcWhraUc5dzBCQVFFRgpBQU9DQVE4QU1JSUJDZ [...]
  tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2UUlCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktjd2dnU2pBZ0VBQW9JQkFRQ2RONmNGN2pKd1lnREoKMjFvWmI2VWo1Q0tIVzdjakRlOTRtNnlkaVJHdmI5WWJmaGZzVUVzckpMLy9MUWxqZ0h5cU9jcWlNOEg4aHNydwpIQnFBYzltNkRpaFBtSEhjbzUzemgzUmRlV28zSUkwdVBzNFNHbkw5dGpRNThlZUd0NExJTThVTE1yaDRKa0pBClg2Y0ZIMVZub2JRQk1GK0psOURMM1AzN1dYWDN2S0lDNHVEZW12Z2g4QlFya3YyVSticGNaQTNnWFdHa0FrNmsKd0N3L1lpdFllUWZORlc0eVRkVjdiWFJuaWJjRmhmcURWOUpTM1EwN3d5VXBYOUZsOXVLcHpJUzMwdXVyMXRRRwpCZ094dmFJVXh0VVdtd [...]
