tests/listener/multiple/https/3-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: gateway
  labels:
    domain: k8s-gateway.nginx.org
spec:
  gatewayClassName: nginx
  listeners:
  - name: https-coffee
    hostname: coffee.example.com
    port: 443 
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: coffee 
  - name: https-tea
    hostname: tea.example.com
    port: 443
    protocol: HTTPS
    tls:
      mode: Passthrough # not supported
      certificateRefs:
      - kind: Secret
        name: tea
